updated the posts

--- a/_posts/2016-01-22-Manila.md
+++ b/_posts/2016-01-22-Manila.md
@@ -1,12 +1,10 @@
 ---
 layout: post
-title: Lagos and Manila: A Tale of Two cities
 author: Bankole
+title: "Lagos and Manila: A Tale of Two cities"
 ---
 
 Nigeria and Philippines have a lot in common. Both are middle-income countries with a GDP per capita around $3000. They have a relatively young population and have experienced strong growth in the last few years. Lagos, like Manila, is a perpetually gridlocked, densely populated city that has grown organically with limited urban planning. Unlike Lagos, however, Manila has regular electricity. That’s not the only thing the Philippines has over Nigeria.
-
-![](https://miro.medium.com/max/48/1*inOQnm88wg9mnwzL8SdiBw.jpeg?q=20)
 
 ![](https://miro.medium.com/max/6400/1*inOQnm88wg9mnwzL8SdiBw.jpeg)
 
@@ -17,8 +15,6 @@ This post will discuss 2 (of many) things that stood out during a 2-week trip to
 # **Tourism and Boracay beach** — “What exactly is the fuss about?”
 
 Philippines is an archipelago made up of over 7,000 islands so it’s not surprising that they have great beaches. Of all the beaches, few are more popular than Boracay, a 45-minute plane ride from Manila.
-
-![](https://miro.medium.com/max/48/1*IR1OAEVr5MjZEWuqLSWnTw.jpeg?q=20)
 
 ![](https://miro.medium.com/max/6451/1*IR1OAEVr5MjZEWuqLSWnTw.jpeg)
 
