modifications to posts

--- a/_posts/2016-01-22-Manila.md
+++ b/_posts/2016-01-22-Manila.md
@@ -6,6 +6,7 @@ title: "Lagos and Manila: A Tale of Two cities"
 
 Nigeria and Philippines have a lot in common. Both are middle-income countries with a GDP per capita around $3000. They have a relatively young population and have experienced strong growth in the last few years. Lagos, like Manila, is a perpetually gridlocked, densely populated city that has grown organically with limited urban planning. Unlike Lagos, however, Manila has regular electricity. That’s not the only thing the Philippines has over Nigeria.
 
+
 ![](https://miro.medium.com/max/6400/1*inOQnm88wg9mnwzL8SdiBw.jpeg)
 
 Manila at night from a few thousand feet
@@ -20,13 +21,14 @@ Philippines is an archipelago made up of over 7,000 islands so it’s not surpri
 
 Sand and palm trees of Boracay
 
+
 Boracay is beautiful. Sold as a dream tourist destination, it has the right combination of local and western culture that forex-spending foreigners love. It is inexpensive to travel there — $50 for a plane ticket from Manila and another 50 cents for a ferry ride to the busy island with its narrow streets. Meals are cheap, costing as little as $3 at the best restaurants. Still, I was unimpressed. I couldn’t help think about how Nigeria has beaches at least as beautiful as Boracay, but not as popular. What would it take for us to develop holiday destinations in Nigeria?
 
 Boracay’s evolution has been supported by Government. They built roads and airports to support the constant stream of tourists. They advertised heavily and developed a brand for tourism in the country — “It’s more fun in the Philippines”. Philippines is visa-free to most OECD countries and is therefore a tempting holiday destination. The locals are welcoming and have a solid understanding that the constant stream of visitors is what drives their livelihood.
 
 Beyond ‘exciting’ locations, tourism requires supporting infrastructure. It’s the perceived safety of lives and property. It’s internet access and regular electricity. It’s accessible, inexpensive transportation options. To understand why it’s Boracay and not Bar Beach, well, those are some clues to start.
 
-# **Business Process Outsourcing** — “Man, I’m sure Nigeria has more unemployed graduates who speak English”
+# **Business Process Outsourcing** — _“Man, I’m sure Nigeria has more unemployed graduates who speak English”_
 
 Among other things, BPO describes companies moving parts of their business to lower cost countries, with call centers being the easiest and most common.
 
@@ -38,7 +40,9 @@ If you hear them tell it, the Philippines has natural advantages over most count
 
 None of these advantages are impossible to replicate in Nigeria, no?
 
+
 ***
+
 
 This is not to put the Philippines on a pedestal — that country has many issues. Income inequality, insurgency and terrorism in the south, slowing economic growth to name a few. However, they appear to have got tourism and BPO going.
 
